<resources>
    <string name="app_name">QuickNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priority">Priority : </string>
    <string name="add_quick_note">add quick note</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="notes">Notes</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete_this_note">Are you sure want to delete \nthis note ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
</resources>