<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".presentation.fragments.AddNoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Add quick note"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_30sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:imeOptions="actionDone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/input_layout_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:imeOptions="actionDone"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/priorities"
            app:layout_constraintBottom_toBottomOf="@id/priorities"
            android:text="@string/priority"/>

        <RadioGroup
            android:id="@+id/priorities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp"
            android:gravity="center"
            android:checkedButton="@id/priority_low"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toEndOf="@id/tv_priority"
            app:layout_constraintTop_toBottomOf="@id/input_layout_subtitle"
            >
            <RadioButton
                android:id="@+id/priority_low"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:text="@string/low"
                android:textColor="@android:color/transparent"
                android:background="@drawable/low_priority_bg"
                android:button="@android:color/transparent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/priority_medium"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:text="@string/medium"
                android:textColor="@android:color/transparent"

                android:background="@drawable/medium_priority_bg"
                android:button="@android:color/transparent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/priority_high"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/high_priority_bg"
                android:button="@android:color/transparent"
                android:text="@string/high"
                android:textColor="@android:color/transparent"

                />



        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/notes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginVertical="@dimen/_20sdp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/priorities"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:imeOptions="actionDone"
                android:gravity="top"
                />
        </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/add_quick_note"
        android:src="@drawable/ic_checked" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>